# Webserver_CMake

./: .gitignore  CMakeLists.txt
Webserver_CMake/: CMakeLists.txt  CompressionHandler.h  ContentTypes.h  Definitions.h  Endpoints.cpp  Endpoints.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Webserver.cpp  public.h
Webserver_CMake/TLSHandling/: TLSDefinitions.h
